--- a/app/elements/graph-view/graph-view.html
+++ b/app/elements/graph-view/graph-view.html
@@ -82,8 +82,10 @@
 			  color = d3.scaleOrdinal(d3.schemeCategory10);
 
 			var simulation = d3.forceSimulation(graphView.nodes)
-				.force("link", d3.forceLink().id(function(d) { return d.__firebaseKey__; }))
-				.force("charge", d3.forceManyBody().strength(0))
+				.force("charge", d3.forceManyBody().strength(-10))
+				.force("link", d3.forceLink()
+												.id(function(d) { return d.__firebaseKey__; })
+												.distance(100))
 				.force("center", d3.forceCenter(width / 2, height / 2))
 				.on("tick", ticked);
 
@@ -109,7 +111,8 @@
 				nodeEnter.append("text")
 					.attr("dx", 12)
 					.attr("dy", ".35em")
-					.text(function(d) { return d.__firebaseKey__; });
+					.text(function(d, i) { return i; });
+					// .text(function(d) { return d.__firebaseKey__; });
 				nodeEnter.append("path").attr("class", "path");
 				nodeEnter.call(d3.drag()
 							 .on("start", dragstarted)
